--- a/app/views/secs/login.scala.html
+++ b/app/views/secs/login.scala.html
@@ -19,7 +19,7 @@
               <div class="text-center">
                 <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
               </div>
-              @helper.form(action=routes.Users.login,'class -> "user",'id -> "loginForm"){
+              @helper.form(action=routes.Users.login,"class" -> "user","id" -> "loginForm"){
               <div class="form-group">
                 <input type="text" class="form-control form-control-user" id="usernameInput" name="username" placeholder="用户名/邮箱">
               </div>
