Refactory Admin Dashboard

--- a/modules/adminboot/app/views/adminboot/_content/body.scala.html
+++ b/modules/adminboot/app/views/adminboot/_content/body.scala.html
@@ -1,4 +1,8 @@
 <!-- Main Content -->
+<div id="content">
+
+  @topbar()
+  <!-- End of Topbar -->
 
   <!-- Begin Page Content -->
   <div class="container-fluid">
@@ -283,6 +287,9 @@
 
   </div>
   <!-- /.container-fluid -->
+
+</div>
+<!-- End of Main Content -->
 
 <!-- Footer -->
 <footer class="sticky-footer bg-white">
