--- a/app/views/admin/index.scala.html
+++ b/app/views/admin/index.scala.html
@@ -1,5 +1,3 @@
 @()
 
-@main("Welcome to Play Administrator") {
-  <h1>Welcome to Play Administrator!</h1>
-}
+@layout(title="Welcom to Hostplay Admin")
