--- a/app/views/admin/articles/editormd.scala.html
+++ b/app/views/admin/articles/editormd.scala.html
@@ -1,9 +1,3 @@
-@*
- * This template is called from the `index` template. This template
- * handles the rendering of the page header and body tags. It takes
- * two arguments, a `String` for the title of the page and an `Html`
- * object to insert into the body of the page.
- *@
 
 @import helper._
 @import models.blogs.{Article,ArticleCategory}
@@ -114,6 +108,8 @@ function serializeObject(form){
 @body = {
 
     <div class="container-fluid">
+
+    <h1>@WebUtil</h1>
 
         <div id="buttons" class="text-right">
 
