--- a/app/views/admin/articles/editormd.scala.html
+++ b/app/views/admin/articles/editormd.scala.html
@@ -1,4 +1,3 @@
-
 @import helper._
 @import models.blogs.{Article,ArticleCategory}
 @import utils.data.ActionMode
@@ -8,12 +7,135 @@
 @(article:Article = new Article(),mode:ActionMode = ActionMode.create)(implicit request: RequestHeader)
 
 @moreHead = {
-    <link rel="stylesheet" href="/assets/editormd/css/editormd.css" />
+    <link rel="stylesheet" href="/assets/editormd/css/editormd.css"/>
 }
+
+
+@body = {
+
+<div class="container-fluid">
+
+    <div id="buttons" class="text-right">
+
+        @if(mode == ActionMode.create){
+        <button class="btn btn-primary" id="publishNewCommand">发布</button>
+        }
+        @if(mode == ActionMode.edit){
+        <input type="submit" value="发布更新" id="publishUpdateCommand"/>
+        }
+        @if(article.id != null){
+        <a href="@routes.Articles.show(article.id.toString)" target="_blank">查看</a>
+        }
+    </div>
+
+    <form id="articleForm">
+        <div class="row">
+            <div class="col-sm-9 col-md-9">
+
+                <div class="form-group">
+                    <label for="artileForm_title">标题</label>
+                    <input type="text" class="form-control" id="artileForm_title" name="title"
+                           value="@article.title"/>
+                </div>
+                @CSRF.formField
+
+                <div class="form-group">
+                    <label for="test-editor">正文</label>
+                    <div id="test-editor">
+                        <textarea id="textValue">@article.details</textarea>
+                    </div>
+                </div>
+
+            </div>
+
+
+            <div class="col-sm-3 col-md-3">
+
+                <div class="form-group">
+                    <label for="artileForm_category">分类</label>
+                    <select id="artileForm_category" name="category" class="form-control">
+                        @for(c <- ArticleCategory.all){
+                        <option value="@c.id" @Option.apply(article.category).map( theC => if(theC.id == c.id) "selected=true" )>@c.name</option>
+                        }
+                    </select>
+                </div>
+
+
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold text-primary">分类</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="overflow-auto" style="height:100px;">
+                        @for(i <- 1 to 10){
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox">分类@i
+                            </label>
+                        </div>
+                        }
+                        </div>
+
+                    </div>
+                </div>
+
+
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold text-primary">标签</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="overflow-auto" style="height:100px;">
+                            @for(i <- 1 to 10){
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" name="tag"/>标签@i
+                                </label>
+                            </div>
+                            }
+                        </div>
+
+                    </div>
+                </div>
+
+
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold text-primary">扩展信息</h6>
+                    </div>
+                    <div class="card-body">
+
+                        <div class="form-group">
+                            <label for="artileForm_remark">描述</label>
+                            <textarea class="form-control" id="artileForm_remark" name="remark"
+                                      value="@article.remark"></textarea>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="artileForm_remark">关键字</label>
+                            <textarea class="form-control" id="artileForm_remark" name="remark"
+                                      value="@article.remark"></textarea>
+                        </div>
+
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+
+
+    </form>
+
+</div>
+
+
+}
+
 
 @moreBody = {
 
-    <script src="/assets/editormd/editormd.min.js"></script>
+<script src="/assets/editormd/editormd.min.js"></script>
 <script type="text/javascript">
     $(function() {
 
@@ -99,86 +221,9 @@ function serializeObject(form){
         });
 
     });
-    </script>
-    <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
 
-
-}
-
-@body = {
-
-    <div class="container-fluid">
-
-    <h1>@WebUtil</h1>
-
-        <div id="buttons" class="text-right">
-
-        @if(mode == ActionMode.create){
-            <button class="btn btn-primary" id="publishNewCommand">发布</button>
-        }
-        @if(mode == ActionMode.edit){
-        <input type="submit" value="发布更新" id="publishUpdateCommand"/>
-        }
-        @if(article.id != null){
-        <a href="@routes.Articles.show(article.id.toString)" target="_blank">查看</a>
-        }
-    </div>
-
-  <form id="articleForm">
-  <div class="row">
-    <div class="col-sm-9 col-md-9">
-
-                <div class="form-group">
-            <label for="artileForm_title">标题</label>
-            <input type="text" class="form-control" id="artileForm_title" name="title"
-                   value="@article.title"/>
-        </div>
-        @CSRF.formField
-
-    <div class="form-group">
-        <label for="test-editor">正文</label>
-    <div id="test-editor">
-        <textarea id="textValue">@article.details</textarea>
-    </div>
-    </div>
-
-    </div>
-
-
-    <div class="col-sm-3 col-md-3">
-
-                <div class="form-group">
-            <label for="artileForm_category">分类</label>
-            <select id="artileForm_category" name="category" class="form-control">
-                @for(c <- ArticleCategory.all){
-                <option value="@c.id" @Option.apply(article.category).map( theC => if(theC.id == c.id) "selected=true" )>@c.name</option>
-                }
-            </select>
-        </div>
-
-        <div class="card shadow mb-4">
-                <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-primary">扩展信息</h6>
-                </div>
-                <div class="card-body">
-
-<div class="form-group">
-  <label for="artileForm_remark">描述</label>
-  <textarea class="form-control" id="artileForm_remark" name="remark"
-                   value="@article.remark"></textarea>
-</div>
-
-                </div>
-        </div>
-
-
-    </div>
-  </div>
-
-
-  </form>
-
-</div>
+</script>
+<script src="@routes.Assets.versioned(" javascripts/main.js")" type="text/javascript"></script>
 
 
 }
