--- a/app/views/admin/article_categories/create.scala.html
+++ b/app/views/admin/article_categories/create.scala.html
@@ -1,10 +1,11 @@
 
 @import helper._
+@import ui.Boostrap4Helper._
 @import views.html.blogs.layouts._
 @import models.blogs._
 @import controllers.admin.{layout => Layout}
 
-@(editForm:Form[_],categories:List[ArticleCategory] = List())(implicit requestHeader:RequestHeader,
+@(editForm:Form[_],categories:List[ArticleCategory] = List(),options:Seq[(String,String)]=Seq())(implicit requestHeader:RequestHeader,
   messagesProvider: MessagesProvider,flash: Flash)
 
 
@@ -16,10 +17,27 @@
 
 <div class="container">
 
-  @Html(flash.get("errors"))
-  @Html(flash.get("success"))
+    @flash.get("success").map{ v =>
+    <div style="color:green;">
+        @v
+    </div>
+    }
 
- <form>
+    @flash.get("error").map{ v =>
+    <div style="color:red;">
+        @v
+    </div>
+    }
+
+    @flash.get("name").map{ v =>
+    <div style="color:red;">
+        @v
+    </div>
+    }
+
+ <form action="/admin/article-categories/save">
+
+
 
     <div class="form-group">
       <label for="category">Parent</label>
@@ -29,19 +47,13 @@
         }
       </select>
     </div>
-    <div class="form-group">
-      <label for="title">Code</label>
-      <input type="text" name="title" id="title" class="form-control"/>
-    </div>
-  <div class="form-group">
-    <label for="url">Name</label>
-    <input type="text" name="title" id="url" class="form-control"/>
-  </div>
+
+     @helper.select(editForm("parent"), options=options, "_label" -> "Parent", "class" -> "form-control")
+     @helper.inputText(editForm("code"), "_label" -> "Code", "class" -> "form-control")
+     @helper.inputText(editForm("name"), "_label" -> "Name", "class" -> "form-control")
 
 
-    <button type="submit" class="btn btn-primary">保存</button>
-    <button class="btn btn-primary">保存草稿</button>
-    <button class="btn btn-primary">发布</button>
+    <button type="submit" class="btn btn-primary">Save</button>
 
     @CSRF.formField
 
